# nighthawk

./: .env.template  .gitignore  Cargo.toml  README.md
context/: plan.md  progress.md  todo.md
src/: command.rs  index.rs  main.rs  run.rs  tui.rs
src/lib/: lib.rs  run.rs  tui.rs
src/lib/log/: command.rs  entry.rs  memtable.rs  mod.rs
src/lib/log/header/: mod.rs  reader.rs  writer.rs
src/lib/log/sstable/: bloom_filter.rs  compact.rs
src/log/: command.rs  compact.rs  entry.rs  header.rs  index.rs  memtable.rs  merge.rs  mod.rs  sstable.rs
src/log/header/: deserializer.rs  mod.rs  reader.rs  serializer.rs  writer.rs
src/log/sstable/: bloom_filter.rs  compact.rs  mod.rs
tests/: server.rs
