[package]
name = "nighthawk"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "nighthawk"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.102"
crc32fast = "1.5.0"
dotenvy = "0.15.7"
thiserror = "2.0.18"
wincode = { version = "0.4.5", features = ["derive"] }
xxh3 = "0.1.1"

[dev-dependencies]
tempfile = "3"

